# BLAIRE_AI

./: .env.example  .gitignore  README.md  deployment_notes.md  design_document.md  docker-compose.yml  project_plan.md  pyproject.toml
DesignDocs/: BLAIRE Core – Heartbeat & Autonomy Specification.md  BLAIRE Core – Learning & Memory Update Specification.md  BLAIRE Core – Memory Architecture Specification.md  BLAIRE Core – Prompt & Context Budget Specification.md  BLAIRE Core – System Overview.md  BLAIRE Core – Tooling & Permission Model.md  mainDesign.md
backend/: .dockerignore  Dockerfile  requirements.txt
config/: dev.json  prod.json
data/: preferences.json  profile.json
docs/: DEVELOPMENT.md  OPERATIONS.md  README.md  WAVE1_TOOLS.md  admin_runbook.md  api_reference.md  architecture.md  code_review_efficiency_security.md  configuration.md  deployment.md  installation_guide.md  model_selection.md  quickstart.md  security_model.md  troubleshooting.md  user_manual.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
mcp-ha/: server.py
mcp-homelab/: server.py
mcp-obsidian/: Dockerfile  server.py
ops/: bootstrap.ps1  bootstrap.sh  deploy-compose.sh  preflight.ps1  preflight.sh  smoke-test.ps1  smoke-test.sh
scripts/: demo_tools_dry_run.ps1
tests/: test_auto_web_search.py  test_cli_intents.py  test_config_and_restricted_mode.py  test_evolving_soul.py  test_health.py  test_heartbeat_jobs.py  test_memory_improvements.py  test_memory_locks.py  test_memory_store_json.py  test_orchestrator_tool_loop.py  test_prompt_learning.py  (+9 more)
(+173 files in other folders)
